# ImageClassification

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
clsenv/: pyvenv.cfg
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/ClassificationModel/: __init__.py  exec.py  main.py
src/ClassificationModel/Classification/: __init__.py  classifiers.py  data.py  processing.py
