[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ClassificationModel"
version = "0.1.0"
description = "A short project on training classfication model on the various images of numbers."
readme = "README.rst"
authors = [
  {name = "Priyank Rao", email = "priyankrao2512@gmail.com"}
]
maintainers = [
  {name = "Priyank Rao", email = "priyankrao2512@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/DebugJedi/ClassificationModel/issues"
changelog = "https://github.com/DebugJedi/ClassificationModel/blob/master/changelog.md"
homepage = "https://github.com/DebugJedi/ClassificationModel"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

